@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+include/Makefile.am:  Use hint at http://www.in-ulm.de/~mascheck/various/echo/
+  to try to remove a portability issue regarding use of echo -n.
+Kevin Bulgrien 2008-01-29
+
 Fix for bug 1850524 - SDL clients crash when entering boat.  Bogus scroll
 values were being sent on mapscroll, but only the SDL client did anything
 with the mapscroll variables, so only it saw problems.
